--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
 		"vite": "^4.4.2",
 		"vitest": "^0.32.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"lit-html": "^2.8.0"
+	}
 }
