--- a/package.json
+++ b/package.json
@@ -33,8 +33,5 @@
 		"vite": "^4.4.2",
 		"vitest": "^0.32.2"
 	},
-	"type": "module",
-	"dependencies": {
-		"lit-html": "^2.8.0"
-	}
+	"type": "module"
 }
